--- a/sub_clash/home_clash.yaml
+++ b/sub_clash/home_clash.yaml
@@ -25,8 +25,8 @@ dns:
 proxies: 
   - name: china_mobile_0
     type: vless
-    server: 172.67.40.40
-    port: 2052
+    server: 172.67.207.109
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -39,8 +39,8 @@ proxies:
 
   - name: china_mobile_1
     type: vless
-    server: 104.28.162.5
-    port: 2052
+    server: 104.25.83.86
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -53,8 +53,8 @@ proxies:
 
   - name: china_mobile_2
     type: vless
-    server: 104.19.52.111
-    port: 2052
+    server: 104.30.247.85
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -67,8 +67,8 @@ proxies:
 
   - name: china_mobile_3
     type: vless
-    server: 172.66.234.156
-    port: 2052
+    server: 104.23.152.18
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -81,8 +81,8 @@ proxies:
 
   - name: china_mobile_4
     type: vless
-    server: 172.67.41.44
-    port: 2052
+    server: 104.20.6.246
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -95,8 +95,8 @@ proxies:
 
   - name: china_mobile_5
     type: vless
-    server: 172.67.42.224
-    port: 2052
+    server: 104.17.220.239
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -109,8 +109,8 @@ proxies:
 
   - name: china_mobile_6
     type: vless
-    server: 104.25.26.208
-    port: 2052
+    server: 104.18.144.194
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -123,8 +123,8 @@ proxies:
 
   - name: china_mobile_7
     type: vless
-    server: 104.27.141.166
-    port: 2052
+    server: 172.67.35.78
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -137,8 +137,8 @@ proxies:
 
   - name: china_mobile_8
     type: vless
-    server: 172.66.236.150
-    port: 2052
+    server: 104.17.221.184
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -151,8 +151,8 @@ proxies:
 
   - name: china_mobile_9
     type: vless
-    server: 104.30.132.209
-    port: 2052
+    server: 104.24.215.118
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -165,8 +165,8 @@ proxies:
 
   - name: china_mobile_10
     type: vless
-    server: 162.158.96.59
-    port: 2052
+    server: 104.24.178.14
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -179,8 +179,8 @@ proxies:
 
   - name: china_mobile_11
     type: vless
-    server: 172.64.195.180
-    port: 2052
+    server: 104.27.87.70
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -193,8 +193,8 @@ proxies:
 
   - name: china_mobile_12
     type: vless
-    server: 104.28.200.232
-    port: 2052
+    server: 104.27.140.69
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -207,8 +207,8 @@ proxies:
 
   - name: china_mobile_13
     type: vless
-    server: 104.28.104.220
-    port: 2052
+    server: 104.27.191.233
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -221,8 +221,8 @@ proxies:
 
   - name: china_mobile_14
     type: vless
-    server: 162.158.217.29
-    port: 2052
+    server: 104.24.209.216
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -235,8 +235,8 @@ proxies:
 
   - name: china_mobile_15
     type: vless
-    server: 104.30.135.57
-    port: 2052
+    server: 104.19.222.188
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -249,8 +249,8 @@ proxies:
 
   - name: china_mobile_16
     type: vless
-    server: 172.67.43.189
-    port: 2052
+    server: 104.24.210.119
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -263,8 +263,8 @@ proxies:
 
   - name: china_mobile_17
     type: vless
-    server: 104.28.171.141
-    port: 2052
+    server: 104.16.215.138
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -277,8 +277,8 @@ proxies:
 
   - name: china_mobile_18
     type: vless
-    server: 172.67.207.109
-    port: 2052
+    server: 104.16.159.188
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -291,8 +291,162 @@ proxies:
 
   - name: china_mobile_19
     type: vless
-    server: 172.66.231.79
-    port: 2052
+    server: 172.67.44.235
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_20
+    type: vless
+    server: 104.22.67.35
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_21
+    type: vless
+    server: 104.30.142.151
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_22
+    type: vless
+    server: 104.29.131.76
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_23
+    type: vless
+    server: 172.65.169.63
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_24
+    type: vless
+    server: 104.21.57.167
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_25
+    type: vless
+    server: 104.31.177.22
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_26
+    type: vless
+    server: 162.159.64.189
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_27
+    type: vless
+    server: 104.22.174.208
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_28
+    type: vless
+    server: 104.22.122.64
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_29
+    type: vless
+    server: 104.22.60.198
+    port: 80
+    uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
+    tls: false
+    servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
+    client-fingerprint: randomized
+
+  - name: china_mobile_30
+    type: vless
+    server: 172.65.167.150
+    port: 80
     uuid: 04ce1b0c-d154-4b24-85d7-e788c8f83bb7
     tls: false
     servername: hellomerry.ssc0nl-9iial87gr4mbw.workers.dev
@@ -329,7 +483,18 @@ proxy-groups:
       - china_mobile_16 
       - china_mobile_17 
       - china_mobile_18 
-      - china_mobile_19  
+      - china_mobile_19 
+      - china_mobile_20 
+      - china_mobile_21 
+      - china_mobile_22 
+      - china_mobile_23 
+      - china_mobile_24 
+      - china_mobile_25 
+      - china_mobile_26 
+      - china_mobile_27 
+      - china_mobile_28 
+      - china_mobile_29 
+      - china_mobile_30  
 
   - name: 自动选择
     type: url-test
@@ -354,6 +519,17 @@ proxy-groups:
       - china_mobile_17 
       - china_mobile_18 
       - china_mobile_19 
+      - china_mobile_20 
+      - china_mobile_21 
+      - china_mobile_22 
+      - china_mobile_23 
+      - china_mobile_24 
+      - china_mobile_25 
+      - china_mobile_26 
+      - china_mobile_27 
+      - china_mobile_28 
+      - china_mobile_29 
+      - china_mobile_30 
     url: "http://www.gstatic.com/generate_204"
     interval: 86400
     
@@ -380,6 +556,17 @@ proxy-groups:
       - china_mobile_17 
       - china_mobile_18 
       - china_mobile_19 
+      - china_mobile_20 
+      - china_mobile_21 
+      - china_mobile_22 
+      - china_mobile_23 
+      - china_mobile_24 
+      - china_mobile_25 
+      - china_mobile_26 
+      - china_mobile_27 
+      - china_mobile_28 
+      - china_mobile_29 
+      - china_mobile_30 
     url: "http://www.gstatic.com/generate_204"
     interval: 7200
     
